# bili-unit

./: .env.example  .gitignore  CONTEXT.md  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml
bili_unit/: __init__.py  __main__.py  _aggregates.py  _cli_render.py  _env.py  _logging.py  _manifest.py  _progress.py  _retry.py  _selection.py  _types.py  doctor.py  service.py  tui.py  tui_spec.py  workbench.py
bili_unit/_db/: __init__.py  connection.py  context.py  paths.py
bili_unit/_db/ddl/: __init__.py  main_v1.sql  main_v2.sql  main_v3.sql  main_v4.sql  raw_v1.sql  raw_v2.sql  raw_v3.sql
bili_unit/_storage/: __init__.py  _errors.py  _kv.py  _schema.py  _store.py
bili_unit/asr/: __init__.py  command.py
bili_unit/command/: __init__.py  _workflow.py
bili_unit/fetching/: __init__.py  __main__.py  _adapter_core.py  _bilibili_adapter.py  _endpoint_catalog.py  _endpoint_spec.py  _error_pack.py  _protocol.py  _store.py  auth.py  client.py  command.py  data.py  env.py  error.py  keys.py  protocols.py  query.py  rate_limit.py  task.py  worker_client.py
bili_unit/fetching/_adapters/: __init__.py  _pagination.py  _subtitle.py  _video.py
bili_unit/fetching/_endpoint_groups/: __init__.py  _channel_upower.py  _content.py  _user.py  _video.py
bili_unit/fetching/runner/: __init__.py  _endpoint.py  _failure.py  _item_fanout.py  _item_ids.py  _run_scope.py
bili_unit/observability/: __init__.py  _events.py  _reporter.py  _sinks.py  dashboard.py  summary.py
bili_unit/parsing/: __init__.py  _images.py  _store.py  command.py  data.py  env.py  keys.py  materializer.py  protocols.py  query.py  specs.py
bili_unit/parsing/models/: __init__.py  _refs.py  article.py  content_post.py  dynamic.py  opus.py  up_profile.py  video_detail.py  video_subtitle.py
bili_unit/parsing/selectors/: __init__.py  _common.py  article.py  dynamic.py  merge.py  opus.py
bili_unit/processing/: __init__.py  __main__.py  _estimate.py  _store.py  _work_items.py  command.py  data.py  env.py  error.py  keys.py  query.py  runner.py  task.py
bili_unit/processing/audio/: __init__.py  _asr_backend.py  _asr_cache.py  _converter.py  _downloader.py  _ffmpeg.py  (+4 more)
bili_unit/query/: __init__.py
bili_unit/tests/: conftest.py  fake_worker.py  test_bili_command_sync.py  test_cli_handlers.py  test_cli_render.py  test_cli_subset.py  test_db_connection.py  test_db_skeleton.py  test_delete_uid.py  test_docs_contract.py  test_doctor.py  test_endpoint_catalog.py  test_error_injection.py  test_fetching_article_detail.py  test_fetching_article_list_detail.py  test_fetching_auth.py  test_fetching_client.py  test_fetching_command.py  test_fetching_data.py  test_fetching_env.py  test_fetching_error.py  test_fetching_error_classification.py  test_fetching_error_pack.py  test_fetching_extended_endpoints.py  test_fetching_integration.py  test_fetching_media_list_and_runner_safety.py  test_fetching_opus_detail.py  test_fetching_profiles.py  test_fetching_protocol.py  test_fetching_query.py  test_fetching_rate_limit.py  test_fetching_runner.py  test_fetching_store_sqlite.py  test_fetching_subtitle.py  test_fetching_task.py  test_fetching_video_detail.py  test_fixtures_loadable.py  test_legacy_asr_migration.py  test_logging_redaction.py  test_manifest.py  (+42 more)
docs/: README.md  api.md  architecture-review-2026-06-14.md  architecture.md  endpoint-contract.md  ipc-contract-f2.md  observability.md  refactor-handoff.md  refactor-phase3-conventions.md  refactor-plan-sqlite.md  schema.md  upstream.md
docs/adr/: 0001-file-directory-json-storage.md  0001-run-observability.md  0002-processing-transform-removed.md  0003-pipeline-executor-kept-as-single-adapter-seam.md  0004-contentpost-runs-alongside-legacy-dataclasses.md  0005-sqlite-as-deliverable.md  0006-drop-query-api.md  0007-one-uid-per-db.md  README.md
docs/design/: endpoint-inventory.md  fetching.md  processing.md
docs/feature/: fetching.md  manifest.md  parsing-refactor-plan.md  parsing.md  processing-shrink-plan.md  processing.md
docs/handoff/: 2026-06-11-bili-user-profile-handler.md
docs/history/: architecture-review-2026-06-14.md  refactor-phase3-conventions.md  refactor-plan-sqlite.md
docs/structure/: bili.md  fetching-contract.md
tools/: migrate_legacy_asr_text.py  migrate_output.py
(+21 files in other folders)
