[project]
name = "bili-unit"
version = "0.1.0"
description = "Bilibili source_data unit: fetching + processing pipelines for the Dialectica project."
requires-python = ">=3.12"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
readme = "README.md"
authors = [{ name = "ChosenEcho" }]
dependencies = [
    "bilibili-api-python~=17.0",
    "aiohttp>=3.9.0",
    "aiolimiter>=1.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "imageio-ffmpeg>=0.5.1",
    "pysilero-vad>=3.0.1,<3.3.0",
]

[project.optional-dependencies]
anti-detect = ["curl_cffi>=0.7.0"]

[project.scripts]
bili-unit = "bili_unit.__main__:main"

[project.urls]
Homepage = "https://github.com/SuperCatQR/bili-unit"
Repository = "https://github.com/SuperCatQR/bili-unit"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bili_unit"]
exclude = ["bili_unit/tests"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["bili_unit/tests"]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=7.1.0",
    "pytest-xdist>=3.6.0",
    "ruff>=0.11.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long
]

[tool.ruff.lint.per-file-ignores]
"bili_unit/tests/*" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["bili_unit"]
